@@ -1,3 +1,6 @@
+2010-10-29  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/edge/infinite-desktop.jl: make infinite-desktop work while moving a window
+
 2010-10-26  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/commands/jump-or-exec.jl: added toggle-or-exec wrapper
 	                                            updated introduction part
